# dino

libdino/src/service/: avatar_manager.vala
main/: CMakeLists.txt  meson.build
main/src/: application.vala  main.vala
plugins/rtp/src/: stream.vala
xmpp-vala/src/module/xep/: pixbuf_storage.vala
